--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                     </div>
                     <!--logo-->
                     <div class="menu">
-                        <a class="active" href="index.html">Home</a>
-                        <a href="">About US</a>
-                        <a href="#expand">Services</a>
-                        <a href="#project">Project</a>
+                        <a class="active" href="#home">Home</a>
+                        <a href="#why-choose-us">About US</a>
+                        <a href="#feature-sec">Services</a>
+                        <a href="#faq-par">Project</a>
                         <a href="#contact">Contact Us</a>
                     </div>
                     
@@ -236,12 +236,7 @@ AD&nbsp; </button>
                         </div>
                     </div>
 <div class="col-sm-4">
-          <div class="progressbar">
-                            <div class="second circle" data-percent="100">
-                                <strong></strong>
-
-                            </div>
-                        </div>
+          <div class="progressbar"> </div>
                     </div>
                 </div>
                 <!--progress-bar-col-->
@@ -400,9 +395,7 @@ AD&nbsp; </button>
                             <li></li>
                         </ul>
                     </div>
-                    <!--price-list-->
-                    <button type="button" class="price-btn">Get Started</button>
-                </div>
+                    <!--price-list-->                </div>
                 <!--basic-price-info-->
             </div>
             <!--basic-price-col-->
@@ -422,9 +415,7 @@ AD&nbsp; </button>
                             <li></li>
                         </ul>
                     </div>
-                    <!--price-list-->
-                    <button type="button" class="price-btn">Get Started</button>
-                </div>
+                    <!--price-list-->                </div>
                 <!--basic-price-info-->
             </div>
             <!--basic-price-col-->
@@ -444,9 +435,7 @@ AD&nbsp; </button>
                             <li></li>
                         </ul>
                     </div>
-                    <!--price-list-->
-                    <button type="button" class="price-btn">Get Started</button>
-                </div>
+                    <!--price-list-->                </div>
                 <!--basic-price-info-->
             </div>
             <!--basic-price-col-->
@@ -481,11 +470,8 @@ AD&nbsp; </button>
                 <div class="form-par">
                     <h2>Get IN Touch With US !</h2>
                     <form>
-                        <input type="text" placeholder="Your Name" class="f-name form-com" />
-                        <input type="email" placeholder="Email" class="em-input form-com" />
-                        <input type="tel" id="phone" name="phone" class="phone-input form-com" placeholder="Mobile No" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
-                        <input type="text" placeholder="business name" class="f-name form-com" />
-                        <input type="submit" value="submit" class="submit-btn" />
+<input type="submit" value="submit" class="submit-btn" />
+						<script type="text/javascript" src="https://c2hcq076.caspio.com/dp/a586d0007b904b83be31480687b1/emb"></script>
                     </form>
                 </div>
             </div>
